--- a/composer.json
+++ b/composer.json
@@ -1,4 +1,7 @@
 {
 	"name": "freebits/time",
-	"require": {}
+	"description": "web framework",
+	"type": "library",
+	"readme": "README.md",
+	"license": "BSD-3-Clause"
 }
