--- a/composer.json
+++ b/composer.json
@@ -9,5 +9,15 @@
 		"ext-pdo": "*",
 		"ext-readline": "*",
 		"ext-imagick": "*"
-	}
+    },
+
+    "require-dev": {
+		"phpunit/phpunit": "^8.5"
+	},
+
+    "autoload": {
+        "psr-4": {
+            "alderley\\": "src/"
+        }
+    }
 }
