--- a/composer.json
+++ b/composer.json
@@ -8,7 +8,8 @@
 	"require": {
 		"ext-pdo": "*",
 		"ext-readline": "*",
-		"ext-imagick": "*"
+		"ext-imagick": "*",
+        "ext-curl": "*"
     },
 
     "require-dev": {
