--- a/composer.json
+++ b/composer.json
@@ -1,6 +1,6 @@
 {
-    "name": "freebits/AlderleyPHP",
-    "description": "web development library",
+    "name": "freebits/PHP997",
+    "description": "A web development library for PHP.",
     "type": "library",
     "readme": "README.md",
     "license": "BSD-2-Clause",
