--- a/composer.json
+++ b/composer.json
@@ -1,5 +1,5 @@
 {
-    "name": "freebits/PHP997",
+    "name": "freebits/php997",
     "description": "A web development library for PHP.",
     "type": "library",
     "readme": "README.md",
